--- a/test/src/CMakeLists.txt
+++ b/test/src/CMakeLists.txt
@@ -12,9 +12,11 @@ add_executable(
         #        public_bi_test.cpp
         #        realnest_read_test.cpp
         #        tester.cpp
-        new_tests/generated_data.cpp
-        new_tests/issue.cpp
-        new_tests/public_bi.cpp)
+        test_datasets/wrong_schema.cpp
+        test_datasets/generated_data.cpp
+        test_datasets/test_fc_bench.cpp
+        test_datasets/issue.cpp
+        test_datasets/public_bi.cpp)
 
 target_link_libraries(tests PUBLIC gtest_main gmock_main FastLanes)
 gtest_discover_tests(tests DISCOVERY_TIMEOUT 60)
