Support embedding footer in the binary file via an option (#13)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,6 +212,13 @@ if (FLS_ENABLE_CLANG_TIDY)
         )
         message("-- FLS: clang-tidy version: ${CLANG_TIDY_VERSION}")
 
+        execute_process(
+                COMMAND ${CLANG_TIDY_EXE} --version
+                OUTPUT_VARIABLE CLANG_TIDY_VERSION
+                OUTPUT_STRIP_TRAILING_WHITESPACE
+        )
+        message("-- FLS: clang-tidy version: ${CLANG_TIDY_VERSION}")
+
     endif ()
 endif ()
 
