--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(cor)
 add_subdirectory(csv)
 add_subdirectory(encoder)
 add_subdirectory(expression)
+add_subdirectory(file)
 add_subdirectory(filter)
 add_subdirectory(footer)
 add_subdirectory(io)
