--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ include(CTest)
 if (NOT "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
     message(FATAL_ERROR "Only Clang is supported!")
 endif ()
+
 if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 13)
     message(FATAL_ERROR "Only Clang >= 13 is supported!")
 endif ()
@@ -123,6 +124,19 @@ if (FLS_BUILD_TESTING OR FLS_BUILD_GPU OR FLS_ENABLE_FSST_TESTING_AND_BENCHMARKI
     set_target_properties(gtest_main PROPERTIES CXX_CLANG_TIDY "")
     set_target_properties(gmock PROPERTIES CXX_CLANG_TIDY "")
     set_target_properties(gmock_main PROPERTIES CXX_CLANG_TIDY "")
+
+    # On Windows, GoogleTest uses Microsoft-specific language extensions like `__try`
+    # that trigger Clang's `-Wlanguage-extension-token` warning.
+    # Since we build with `-Werror`, this causes the build to fail.
+    # This block selectively disables that warning (and suppresses all warnings with `-w`)
+    # only for GoogleTest targets, avoiding global suppression across the project.
+    if (MSVC OR WIN32)
+        foreach (target gtest gtest_main gmock gmock_main)
+            if (TARGET ${target})
+                target_compile_options(${target} PRIVATE -Wno-language-extension-token -w)
+            endif ()
+        endforeach ()
+    endif ()
 endif ()
 
 # ALP: -----------------------------------------------------------------------------------------------------------------
@@ -267,8 +281,24 @@ endif ()
 
 # Test: ----------------------------------------------------------------------------------------------------------------
 if (FLS_BUILD_TESTING)
+    message("---------------------------------------------------------------------------------------------------------")
+    message("-- FLS: Build Testing.")
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/test/include)
+
+    # Helper to apply sanitizer flags only on non-Windows platforms
+    function(fls_enable_sanitizers target)
+        if (NOT WIN32)
+            target_compile_options(${target}
+                    PRIVATE -fsanitize=address -fsanitize=undefined)
+            target_link_options(${target}
+                    PRIVATE -fsanitize=address -fsanitize=undefined)
+        endif ()
+    endfunction()
+
+
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
+
+
 endif ()
 
 
@@ -292,4 +322,11 @@ if (FLS_BUILD_GPU)
     message("---------------------------------------------------------------------------------------------------------")
     message("- GPU:")
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/gpu)
+endif ()
+
+# Playground : ---------------------------------------------------------------------------------------------------------
+if (EXISTS "${CMAKE_SOURCE_DIR}/playground/CMakeLists.txt")
+    message("---------------------------------------------------------------------------------------------------------")
+    message("- FLS: Adding Playground ")
+    add_subdirectory(playground)
 endif ()
