--- a/src/primitive/fsst/CMakeLists.txt
+++ b/src/primitive/fsst/CMakeLists.txt
@@ -10,3 +10,5 @@ set(FASTLANES_OBJECT_FILES
 if (ENABLE_IWYU)
     set_property(TARGET fls_primitive_fsst PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${iwyu_path})
 endif ()
+
+target_compile_options(fls_primitive_fsst PRIVATE -Wno-macro-redefined)
