--- a/test/src/dataset_tests/CMakeLists.txt
+++ b/test/src/dataset_tests/CMakeLists.txt
@@ -8,15 +8,5 @@ add_executable(
 
 target_link_libraries(dataset_tests PUBLIC gtest_main gmock_main FastLanes)
 gtest_discover_tests(dataset_tests DISCOVERY_TIMEOUT 60)
-
-target_compile_options(dataset_tests
-        PRIVATE
-        "-fsanitize=address"
-        "-fsanitize=undefined")
-
-target_link_options(dataset_tests
-        PRIVATE
-        "-fsanitize=address"
-        "-fsanitize=undefined")
-
+fls_enable_sanitizers(dataset_tests)
 
