--- a/test/src/fls_reader_tests/CMakeLists.txt
+++ b/test/src/fls_reader_tests/CMakeLists.txt
@@ -9,14 +9,6 @@ add_executable(
 target_link_libraries(fls_reader_tests PUBLIC gtest_main gmock_main FastLanes)
 gtest_discover_tests(fls_reader_tests DISCOVERY_TIMEOUT 60)
 
-target_compile_options(fls_reader_tests
-        PRIVATE
-        "-fsanitize=address"
-        "-fsanitize=undefined")
-
-target_link_options(fls_reader_tests
-        PRIVATE
-        "-fsanitize=address"
-        "-fsanitize=undefined")
+fls_enable_sanitizers(fls_reader_tests)
 
 
