--- a/test/src/unit_tests/CMakeLists.txt
+++ b/test/src/unit_tests/CMakeLists.txt
@@ -8,14 +8,6 @@ add_executable(
 target_link_libraries(unit_test PUBLIC gtest_main gmock_main FastLanes)
 gtest_discover_tests(unit_test)
 
-target_compile_options(unit_test
-        PRIVATE
-        "-fsanitize=address"
-        "-fsanitize=undefined")
-
-target_link_options(unit_test
-        PRIVATE
-        "-fsanitize=address"
-        "-fsanitize=undefined")
+fls_enable_sanitizers(unit_test)
 
 
