--- a/.github/actions/generate-dataset/action.yml
+++ b/.github/actions/generate-dataset/action.yml
@@ -4,10 +4,15 @@ description: Generate synthetic data using Makefile target
 runs:
   using: "composite"
   steps:
-    - name: Ensure make is available
-      run: make --version
-      shell: bash
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.12"
 
-    - name: Generate synthetic data via Makefile
-      run: make generate_syntethic_data
+    - name: Install dependencies
       shell: bash
+      run: python -m pip install --upgrade pip faker
+
+    - name: Generate synthetic data
+      shell: bash
+      run: make generate_synthetic_data
