--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -38,7 +38,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ ubuntu-latest, macos-latest ]
+        platform: [ ubuntu-latest, macos-latest , windows-latest ]
         build_type: [ Debug, Release ]
         cxx: [ clang++ ]
     runs-on: ${{ matrix.platform }}
@@ -58,9 +58,11 @@ jobs:
       # Configure (runs clang-tidy via CMake)
       # ----------------------------------------------------------------------
       - name: Configure (with clang-tidy checks)
+        shell: bash
         run: |
-          cmake -S ${{ github.workspace }} \
+          cmake -S "${{ github.workspace }}" \
                 -B build_${{ matrix.build_type }} \
+                -DFLS_ENABLE_VERBOSE_OUTPUT=ON \
                 -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
                 -DCMAKE_C_COMPILER=clang \
                 -DCMAKE_CXX_COMPILER=${{ matrix.cxx }}
@@ -105,45 +107,33 @@ jobs:
   # 4️⃣  Synthetic-dataset generator (Python, cached pip)
   # ──────────────────────────────────────────────────────────────────────────────
   generate_dataset:
-    #    needs: build
     strategy:
       matrix:
-        platform: [ ubuntu-latest, macos-latest ]
-        python-version: [ "3.12" ]
+        platform: [ ubuntu-latest, macos-latest, windows-latest ]
     runs-on: ${{ matrix.platform }}
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
+      - name: Generate synthetic dataset
+        uses: ./.github/actions/generate-dataset
 
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('scripts/generate_synthetic_data.py') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Install dependencies
-        run: pip install --upgrade pip faker
-
-      - name: Generate data
-        run: python scripts/generate_synthetic_data.py
 
   # ──────────────────────────────────────────────────────────────────────────────
   # 5️⃣  Example build & run
   # ──────────────────────────────────────────────────────────────────────────────
   example:
-    #    needs: build
     strategy:
       matrix:
-        platform: [ ubuntu-latest, macos-latest ]
+        platform: [ ubuntu-latest, macos-latest, windows-latest ]
         build_type: [ Release ]
         cxx: [ clang++ ]
+
     runs-on: ${{ matrix.platform }}
+
+    defaults:
+      run:
+        shell: bash
 
     steps:
       - uses: actions/checkout@v4
@@ -155,30 +145,51 @@ jobs:
 
       - name: Configure example
         run: |
-          cmake -S ${{ github.workspace }} \
-                -B build_${{ matrix.build_type }} \
-                -DFLS_BUILD_EXAMPLES=ON \
-                -DFLS_ENABLE_CLANG_TIDY=OFF \
-                -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-                -DCMAKE_C_COMPILER=clang \
-                -DCMAKE_CXX_COMPILER=${{ matrix.cxx }}
+          CMAKE_ARGS=(
+            -S "${{ github.workspace }}"
+            -B "build_${{ matrix.build_type }}"
+            -DFLS_BUILD_EXAMPLES=ON
+            -DFLS_ENABLE_VERBOSE_OUTPUT=ON
+            -DFLS_ENABLE_CLANG_TIDY=OFF
+            -DCMAKE_BUILD_TYPE="${{ matrix.build_type }}"
+            -DCMAKE_C_COMPILER=clang
+            -DCMAKE_CXX_COMPILER="${{ matrix.cxx }}"
+          )
+          
+          # Use static MSVC runtime on Windows to avoid ASAN/UBSAN mismatch
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+            CMAKE_ARGS+=(-DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded)
+          fi
+          
+          cmake "${CMAKE_ARGS[@]}"
 
       - name: Build example
-        run: cmake --build build_${{ matrix.build_type }} -j $BUILD_THREADS
+        run: cmake --build "build_${{ matrix.build_type }}" --parallel
 
       - name: Run cpp_example
-        run: build_${{ matrix.build_type }}/examples/cpp_example
+        run: |
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+            ./build_${{ matrix.build_type }}/examples/cpp_example.exe
+          else
+            ./build_${{ matrix.build_type }}/examples/cpp_example
+          fi
 
   # ──────────────────────────────────────────────────────────────────────────────
   # 6️⃣  Tests (Linux + macOS, Release only)
   # ──────────────────────────────────────────────────────────────────────────────
   test:
-    #    needs: example
     strategy:
       matrix:
+        #        platform: [ ubuntu-latest, macos-latest, windows-latest ] // todo - enable  windows-latest
         platform: [ ubuntu-latest, macos-latest ]
         build_type: [ Release ]
+
     runs-on: ${{ matrix.platform }}
+
+    defaults:
+      run:
+        shell: bash  # Use bash on all platforms to avoid PowerShell issues on Windows
+
     env:
       BUILD_THREADS: 12
 
@@ -189,25 +200,33 @@ jobs:
 
       - name: Generate synthetic dataset
         uses: ./.github/actions/generate-dataset
-        with:
-          python-version: "3.12"
 
       - name: Install LLVM
         uses: ./.github/actions/install-llvm
 
       - name: Configure tests
         run: |
-          cmake -S ${{ github.workspace }} \
-                -B test_build_${{ matrix.build_type }} \
-                -DFLS_BUILD_TESTING=ON \
-                -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-                -DFLS_ENABLE_CLANG_TIDY=OFF \
-                -DCMAKE_C_COMPILER=clang \
-                -DCMAKE_CXX_COMPILER=clang++
+          CMAKE_ARGS=(
+            -S "${{ github.workspace }}"
+            -B "test_build_${{ matrix.build_type }}"
+            -DFLS_BUILD_TESTING=ON
+            -DFLS_ENABLE_VERBOSE_OUTPUT=ON
+            -DFLS_ENABLE_CLANG_TIDY=OFF
+            -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+            -DCMAKE_C_COMPILER=clang
+            -DCMAKE_CXX_COMPILER=clang++
+          )
+
+          # On Windows, use static MSVC runtime to prevent ASAN/UBSAN runtime mismatch
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+            CMAKE_ARGS+=(-DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded)
+          fi
+
+          cmake "${CMAKE_ARGS[@]}"
 
       - name: Build tests
-        run: cmake --build test_build_${{ matrix.build_type }} -j $BUILD_THREADS
+        run: cmake --build "test_build_${{ matrix.build_type }}" -j $BUILD_THREADS
 
       - name: Run tests
-        working-directory: test_build_${{ matrix.build_type }}
+        working-directory: "test_build_${{ matrix.build_type }}"
         run: ctest -j $BUILD_THREADS --stop-on-failure --output-on-failure --timeout 5000
