--- a/src/primitive/fsst12/CMakeLists.txt
+++ b/src/primitive/fsst12/CMakeLists.txt
@@ -11,3 +11,5 @@ set(FASTLANES_OBJECT_FILES
 if (ENABLE_IWYU)
     set_property(TARGET fls_primitive_fsst12 PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${iwyu_path})
 endif ()
+
+target_compile_options(fls_primitive_fsst12 PRIVATE -Wno-macro-redefined)
