Add `kv_cache` dataset ([[#37](https://github.com/cwida/ALP/issues/37)](https://github.com/cwida/ALP/issues/37)) to FastLanes test datasets and report compression performance (#17)

--- a/test/src/dataset_tests/CMakeLists.txt
+++ b/test/src/dataset_tests/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(
         generated_data.cpp
         test_fc_bench.cpp
         issue.cpp
+        issues.cpp
         public_bi.cpp)
 
 target_link_libraries(dataset_tests PUBLIC gtest_main gmock_main FastLanes)
