--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,5 +1,7 @@
 name: CI
-run-name: "${{ github.actor }} – ${{ github.event.head_commit.message }}"
+run-name: >-
+  ${{ github.workflow }} on ${{ github.ref_name }} (#${{ github.run_number }})
+  — ${{ github.event.pull_request.title || github.event.head_commit.message }}
 
 # ──────────────────────────────────────────────────────────────────────────────
 # Events
