--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -45,12 +45,21 @@ jobs:
           pip install -U pip
           pip install -q "scikit-build-core>=0.8" pybind11 cmake ninja pytest
 
-      - name: Build the Python extension once
+      - name: Build the Python extension
         run: |
           source .venv/bin/activate
           make rebuild_python_release
 
-      - name: Run pytest suite (without rebuilding)
+      - name: Run native CMake tests
+        run: |
+          source .venv/bin/activate
+          ctest \
+            --output-on-failure \
+            -j4 \
+            -LE python \
+            --test-dir skbuild-editable
+
+      - name: Run Python tests
         run: |
           source .venv/bin/activate
           pytest python/tests -q
@@ -95,10 +104,10 @@ jobs:
           path: dist
 
       - name: Publish to TestPyPI
-        env:
-          TEST_PYPI_API_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
         if: env.TEST_PYPI_API_TOKEN != ''
         uses: pypa/gh-action-pypi-publish@v1.7.0
+        env:
+          TEST_PYPI_API_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
         with:
           user: __token__
           password: ${{ env.TEST_PYPI_API_TOKEN }}
