Add full support for IEEE-754 subnormal floats (#29)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(cfg)
 add_subdirectory(common)
 add_subdirectory(cor)
 add_subdirectory(csv)
+add_subdirectory(detail)
 add_subdirectory(encoder)
 add_subdirectory(expression)
 add_subdirectory(file)
